tests/unit-fail-compilation/j009f.c
// this program shouldn't run
int main(void) {
      {
            int x = 5;
      }
      x;
      return 0;
}
